# little

./: .gitignore  CMakeLists.txt  README.md  build.sh  link_and_run.sh  little
driver/: CMakeLists.txt  little.cpp
examples/: bubblesort.lil  collatz.lil  factors.lil
examples/xfail/: bad-type.lil  bad-unary-op.lil  float.lil
include/little/Ast/: Ast.h
include/little/Codegen/: Codegen.h
include/little/PP/: PP.h
include/little/Parser/: ParseTokens.h  Parser.h  ParserUtils.h
lib/: CMakeLists.txt
lib/AST/: CMakeLists.txt
lib/Codegen/: CMakeLists.txt  Codegen.cpp
lib/PP/: CMakeLists.txt  PP.cpp
lib/Parser/: CMakeLists.txt  Parser.cpp
runtime/: littlert.c
